# Roborio

./: .gitignore  Anchor.toml  Cargo.toml  docs.html  env.example  gitattributes  i18n.js  index.html  manifest.json  npmrc.txt  package-lock.json  package.json  privacy.html  robots.txt  sitemap.xml  terms.html  vercel.json  vite.config.js  vitest.config.js
api/: waitlist.js
api/waitlist/: confirm.js
i18n/: en.json
partials/: architecture.html  demo-preview.html  faq.html  footer.html  hero.html  how-it-works.html  marketplace.html  roadmap.html  usecases.html  waitlist.html
programs/roborio-escrow/: Cargo.toml
programs/roborio-escrow/src/: lib.rs
public/: sitemap.xml
public/scripts/: seo.js
scripts/: animations.js  i18n.js  main.js  marketplace.js  seo.js  waitlist.js  wallet.js
scripts/marketplace/api/: supabase.js
scripts/marketplace/ui/: cards.js  forms.js  modals.js
scripts/marketplace/utils/: validation.js
scripts/models/: robot.js
scripts/ui/: notify.js  withLoading.js
scripts/utils/: logger.js  safeFetch.js  safeSupabase.js  validation.js
styles/: docs.css  faq.css  hero.css  main.css  marketplace.css  privacy.css  terms.css  waitlist.css
supabase/: schema.sql
supabase/functions/wallet-auth/: index.ts
tests/: utils.test.js  validation.test.js
