[workspace]
members = [
    "programs/*"
]

[profile.release]
overflow-checks = true
lto = "fat"
codegen-units = 1

[profile.release.build-override]
opt-level = 3
incremental = false
codegen-units = 1

[patch.crates-io]
blake3 = { path = "vendor/blake3" }
constant_time_eq = { path = "vendor/constant_time_eq" }
